--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "aternos-mineboty",
+  "name": "aternos-bot",
   "version": "1.0.0",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">=18 <23"
+  },
   "dependencies": {
-    "express": "^4.18.3",
-    "mineboty": "^1.0.6"
+    "express": "^4.19.2",
+    "mineflayer": "^4.20.1"
   }
 }
+
